--- a/employee-payroll-web/src/app/employee/employee_card/employee_card.component.html
+++ b/employee-payroll-web/src/app/employee/employee_card/employee_card.component.html
@@ -1,5 +1,5 @@
 <div class='employee-card' *ngIf='employee'>
-    <div class="at_employee_firstName" (click)='selected'>
+    <div class="at_employee_card" (click)='selected'>
         <label>Name:</label>{{employee.firstName}} {{employee.lastName}}
     </div>
 </div>
