Added remote mongo connection in backend, added employee deduction functionality to FE

--- a/employee-payroll-web/src/app/deduction/deduction_card/deduction_card.component.html
+++ b/employee-payroll-web/src/app/deduction/deduction_card/deduction_card.component.html
@@ -1,6 +1,7 @@
-<div class='deduction-card' *ngIf='deduction'>
-    <div class="at_deduction_card" (click)='selected'>
-        {{deduction.name}}, {{deduction.amount}} 
-        <p *ngIf='deduction.type==1'>%</p>
+<div *ngIf='deduction'>
+    <div class="at_deduction_card deduction-card" (click)='selected'>
+        {{deduction.name}}: 
+        <div *ngIf='deduction.type==2' class='deduction-symbol'>$</div>{{deduction.amount}}
+        <div *ngIf='deduction.type==1' class='deduction-symbol'>%</div>
     </div>
 </div>
