--- a/employee-payroll-web/src/app/employee/employee_list/employee_list.component.html
+++ b/employee-payroll-web/src/app/employee/employee_list/employee_list.component.html
@@ -1,3 +1,4 @@
+<h3>Deductions</h3>
 <div *ngFor= 'let employee of employees'>
     <employee-card [employee]='employee' (click)='cardSelected(employee)'></employee-card>
 </div>
