--- a/employee-payroll-web/src/app/employee/employee_main.component.html
+++ b/employee-payroll-web/src/app/employee/employee_main.component.html
@@ -2,8 +2,6 @@
     <employee-list *ngSwitchCase='views.list'
         class="skinny" [employees]='allEmployees' (onSelected)='cardSelected($event)'></employee-list>
     <div *ngSwitchCase='views.details' >
-        <employee-details [employee]='selected'></employee-details>
-        <input type="button" value='Back' (click)='onBack()'/>
-    </div>
-    
+        <employee-edit [employee]='selected'  (done)='onBack($event)'></employee-edit>
+    </div>    
 </div>
